# pymgp

./: .buildinfo  CITATION.cff  README.md  api.html  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  release.html  search.html  searchindex.js  usage.html
.doctrees/: api.doctree  environment.pickle  examples.doctree  index.doctree  release.doctree  usage.doctree
.doctrees/notebooks/: orbplot_scratch.doctree
.doctrees/reference/: crstrans.doctree  orbplot.doctree  satorb.doctree  tleorb.doctree
.github/workflows/: sphinx.yml
_modules/: index.html
_modules/pymgp/: crstrans.html  orbplot.html  satorb.html  tleorb.html
_sources/: api.rst.txt  release.rst.txt
_sources/notebooks/: orbplot_scratch.ipynb.txt
_sources/reference/: crstrans.rst.txt  satorb.rst.txt
docs/: README.md  requirements.txt
docs/source/: api.rst  api.rst-org  conf.py  conf.py-org  examples.rst  examples.rst-org  index.rst  index.rst-org  usage.rst
docs/source/notebooks/: orbplot_scratch.ipynb-disabled  resource-20240802.tle
docs/source/reference/: crstrans.rst  orbplot.rst  satorb.rst  tleorb.rst
notebooks/: orbplot_scratch.html
pymgp/: crstrans.py  crsutil.py  orbplot.py  satorb.py  tleorb.py
reference/: crstrans.html  orbplot.html  satorb.html  tleorb.html
